--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="main.css">
     <meta name="author" content="Collin Marone">
     <!--delete me!!!!!-->
-    <meta http-equiv="refresh" content="10">
+    <!-- <meta http-equiv="refresh" content="10"> -->
     <!--delete me!!!!!-->
 </head>
 
@@ -139,61 +139,80 @@
     <!--------------------------------------------------------->
     <!--PROJECTS----------------------------------------------->
     <!--------------------------------------------------------->
-
-    <h1 class="projectsTitle">PROJECTS</h1>
-
+    <div class="row">
+        <div class="col">
+            <h1 class="projectsTitle">PROJECTS</h1>
+        </div>
+        <div class="col"></div>
+        <div class="col"></div>
+    </div>
 
     <div class="row">
         <div class="col">
-            <div class="card">
-                <div class="card-body card1">
-                    <span class="card-title">&nbsp;monTHLey&nbsp;</span>
-                    <br />
-                    <span class="card-text">&nbsp;a powerful personal budgeting app&nbsp;</span>
+            <a href="https://monthley.azurewebsites.net/" target="_blank" style="color: white; text-decoration: none;">
+                <div class="card">
+                    <div class="card-body card1">
+
+                        <span class="card-title">&nbsp;monTHLey&nbsp;</span>
+                        <br />
+                        <span class="card-text">&nbsp;a powerful personal budgeting app&nbsp;</span>
+
+                    </div>
+                    <div class="card-footer">
+
+                        ASP.NET Web MVC
+
+                    </div>
+
                 </div>
-                <div class="card-footer">
-                    ASP.NET Web MVC
-                </div>
-            </div>
+            </a>
         </div>
+
         <div class="col">
-            <div class="card">
-                <div class="card-body card2">
-                    <span class="card-title">&nbsp;OneNews API&nbsp;</span>
-                    <br />
-                    <span class="card-text">&nbsp;helping news publishers reach their readers&nbsp;</span>
+            <a href="#" target="_blank" style="color: white; text-decoration: none;">
+                <div class="card">
+                    <div class="card-body card2">
+                        <span class="card-title">&nbsp;OneNews API&nbsp;</span>
+                        <br />
+                        <span class="card-text">&nbsp;helping news publishers reach their readers&nbsp;</span>
+                    </div>
+                    <div class="card-footer">
+                        ASP.NET Web API (co-developed)
+                    </div>
                 </div>
-                <div class="card-footer">
-                    ASP.NET Web API
-                </div>
-            </div>
+            </a>
         </div>
     </div>
 
     <div class="row">
         <div class="col">
-            <div class="card">
-                <div class="card-body card3">
-                    <span class="card-title">&nbsp;Console Challenges&nbsp;</span>
-                    <br />
-                    <span class="card-text">&nbsp;mock business-facing apps&nbsp;</span>
+            <a href="#" target="_blank" style="color: white; text-decoration: none;">
+                <div class="card">
+                    <div class="card-body card3">
+                        <span class="card-title">&nbsp;Console Challenges&nbsp;</span>
+                        <br />
+                        <span class="card-text">&nbsp;mock business-facing apps&nbsp;</span>
+                    </div>
+                    <div class="card-footer">
+                        .NET Console Application
+                    </div>
                 </div>
-                <div class="card-footer">
-                    .NET Console Applications
-                </div>
-            </div>
+            </a>
         </div>
         <div class="col">
-            <div class="card">
-                <div class="card-body card4">
-                    <span class="card-title">&nbsp;CSS Creature&nbsp;</span>
-                    <br />
-                    <span class="card-text">&nbsp;making a creature with only CSS&nbsp;</span>
+            <a href="https://codepen.io/cmmarone/pen/oNYaQOJ" target="_blank"
+                style="color: white; text-decoration: none;">
+                <div class="card">
+                    <div class="card-body card4">
+                        <span class="card-title">&nbsp;CSS Creature&nbsp;</span>
+                        <br />
+                        <span class="card-text">&nbsp;making a creature with only CSS&nbsp;</span>
+                    </div>
+                    <div class="card-footer">
+                        HTML/CSS
+                    </div>
                 </div>
-                <div class="card-footer">
-                    HTML/CSS
-                </div>
-            </div>
+            </a>
         </div>
     </div>
 
