--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
 
         <div class="col">
-            <a href="#" target="_blank" style="color: white; text-decoration: none;">
+            <a href="https://github.com/cmmarone/OneNews" target="_blank" style="color: white; text-decoration: none;">
                 <div class="card">
                     <div class="card-body card2">
                         <span class="card-title">&nbsp;OneNews API&nbsp;</span>
@@ -186,7 +186,7 @@
 
     <div class="row">
         <div class="col">
-            <a href="#" target="_blank" style="color: white; text-decoration: none;">
+            <a href="https://github.com/cmmarone/GoldBadgeConsoleChallenges" target="_blank" style="color: white; text-decoration: none;">
                 <div class="card">
                     <div class="card-body card3">
                         <span class="card-title">&nbsp;Console Challenges&nbsp;</span>
