--- a/index.html
+++ b/index.html
@@ -55,52 +55,58 @@
                     <button class="dropdown-toggle btn btn-primary btn-lg" id="dropdownId" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">R&eacute;sum&eacute;</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownId">
-                        <a class="dropdown-item" data-toggle="modal" data-target="#modelId2" href="assets/resume.pdf">View</a>
+                        <!-- <a class="dropdown-item" data-toggle="modal" data-target="#modelId2"
+                            href="assets/resume.pdf">View</a> -->
+                        <a class="dropdown-item" href="assets/Collin-Marone-resume.pdf"
+                            download target="_blank">Download PDF</a>
                         <a class="dropdown-item" href="assets/Collin-Marone-resume.docx"
-                            download="Collin-Marone-Resume">Download</a>
+                            download>Download .docx</a>
                     </div>
                 </li>
             </ul>
         </div>
     </nav>
 
+
     <!--NAV BAR-(mobile)--------------------------------------->
     <!------------------------------------------------------>
-        <div class="navbar-mobile navbar-collapse bg-primary" id="collapsibleNavId">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <button type="button" class="btn btn-primary btn-lg">
-                        <a style="color: white; text-decoration: none;"
-                            href="https://www.linkedin.com/in/collin-marone/" target="_blank">LinkedIn</a>
-                    </button>
-                </li>
+    <div class="navbar-mobile navbar-collapse bg-primary" id="collapsibleNavId">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+                <button type="button" class="btn btn-primary btn-lg">
+                    <a style="color: white; text-decoration: none;" href="https://www.linkedin.com/in/collin-marone/"
+                        target="_blank">LinkedIn</a>
+                </button>
+            </li>
 
-                <li class="nav-item">
-                    <button type="button" class="btn btn-primary btn-lg">
-                        <a style="color: white; text-decoration: none;" href="https://github.com/cmmarone"
-                            target="_blank">GitHub</a>
-                    </button>
-                </li>
-                <li class="nav-item">
-                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modelId">
-                        About Me
-                    </button>
-                </li>
-                <li class="nav-item dropdown">
-                    <button class="dropdown-toggle btn btn-primary btn-lg" id="dropdownId" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">R&eacute;sum&eacute;</button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownId">
-                        <a class="dropdown-item" data-toggle="modal" data-target="#modelId2" href="assets/resume.pdf">View</a>
-                        <a class="dropdown-item" href="assets/Collin-Marone-resume.docx"
-                            download="Collin-Marone-Resume">Download</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
+            <li class="nav-item">
+                <button type="button" class="btn btn-primary btn-lg">
+                    <a style="color: white; text-decoration: none;" href="https://github.com/cmmarone"
+                        target="_blank">GitHub</a>
+                </button>
+            </li>
+            <li class="nav-item">
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modelId">
+                    About Me
+                </button>
+            </li>
+            <li class="nav-item dropdown">
+                <button class="dropdown-toggle btn btn-primary btn-lg" id="dropdownId" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">R&eacute;sum&eacute;</button>
+                <div class="dropdown-menu" aria-labelledby="dropdownId">
+                    <!-- <a class="dropdown-item" data-toggle="modal" data-target="#modelId2"
+                        href="assets/resume.pdf">View</a> -->
+                    <a class="dropdown-item" href="assets/Collin-Marone-resume.pdf"
+                        download target="_blank">Download PDF</a>
+                    <a class="dropdown-item" href="assets/Collin-Marone-resume.docx"
+                        download>Download .docx</a>
+                </div>
+            </li>
+        </ul>
+    </div>
 
     <!--ABOUT ME----------------------------------------------->
     <!------------------------------------------------------>
-
     <!-- Modal -->
     <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -143,13 +149,10 @@
         </div>
     </div>
 
-
-
     <!--RESUME------------------------------------------------->
     <!------------------------------------------------------>
-
     <!-- Modal -->
-    <div class="modal fade" id="modelId2" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+    <!-- <div class="modal fade" id="modelId2" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content modal-content2">
                 <div class="modal-header">
@@ -164,7 +167,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!--PROJECTS----------------------------------------------->
     <!------------------------------------------------------>
@@ -178,28 +181,27 @@
 
     <div class="row">
         <div class="col">
-            <a href="https://monthley.azurewebsites.net/" target="_blank" style="color: white; text-decoration: none;">
-                <div class="card">
+            <div class="card">
+                <a href="https://monthley.azurewebsites.net/" target="_blank"
+                    style="color: white; text-decoration: none;">
                     <div class="card-body card1">
-
                         <span class="card-title">&nbsp;monTHLey&nbsp;</span>
                         <br />
                         <span class="card-text">&nbsp;a powerful personal budgeting app&nbsp;</span>
-
                     </div>
                     <div class="card-footer">
-
                         ASP.NET Web MVC
-
                     </div>
+                </a>
+            </div>
 
-                </div>
-            </a>
         </div>
 
+
         <div class="col">
-            <a href="https://github.com/cmmarone/OneNews" target="_blank" style="color: white; text-decoration: none;">
-                <div class="card">
+            <div class="card">
+                <a href="https://github.com/cmmarone/OneNews" target="_blank"
+                    style="color: white; text-decoration: none;">
                     <div class="card-body card2">
                         <span class="card-title">&nbsp;OneNews API&nbsp;</span>
                         <br />
@@ -208,15 +210,17 @@
                     <div class="card-footer">
                         ASP.NET Web API (co-developed)
                     </div>
-                </div>
-            </a>
+                </a>
+            </div>
         </div>
     </div>
 
+
     <div class="row">
         <div class="col">
-            <a href="https://github.com/cmmarone/GoldBadgeConsoleChallenges" target="_blank" style="color: white; text-decoration: none;">
-                <div class="card">
+            <div class="card">
+                <a href="https://github.com/cmmarone/GoldBadgeConsoleChallenges" target="_blank"
+                    style="color: white; text-decoration: none;">
                     <div class="card-body card3">
                         <span class="card-title">&nbsp;Console Challenges&nbsp;</span>
                         <br />
@@ -225,13 +229,13 @@
                     <div class="card-footer">
                         .NET Console Application
                     </div>
-                </div>
-            </a>
+                </a>
+            </div>
         </div>
         <div class="col">
-            <a href="https://codepen.io/cmmarone/pen/oNYaQOJ" target="_blank"
-                style="color: white; text-decoration: none;">
-                <div class="card">
+            <div class="card">
+                <a href="https://codepen.io/cmmarone/pen/oNYaQOJ" target="_blank"
+                    style="color: white; text-decoration: none;">
                     <div class="card-body card4">
                         <span class="card-title">&nbsp;CSS Creature&nbsp;</span>
                         <br />
@@ -240,8 +244,8 @@
                     <div class="card-footer">
                         HTML/CSS
                     </div>
-                </div>
-            </a>
+                </a>
+            </div>
         </div>
     </div>
 
